--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <div id="root"></div>
+  <div style="color: red; font-size: 20px;">Test text</div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
